test/types/tuple/bradc/onedetuple-error.good
onedetuple-error.chpl:1: error: illegal tuple variable declaration with non-tuple initializer
