test/types/tuple/bradc/onedetuple-error.chpl
var (x): (int);
writeln(x.type:string);
